--- a/craft_shop/templates/decor.html
+++ b/craft_shop/templates/decor.html
@@ -3,27 +3,9 @@
 {% block content %}
 
 
-    <div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-        <div class="container-fluid" style=" margin-top: 100px; height: 50px; ">
-          <table cellpadding="30px" cellspacing="20px" align="center">
-            <tr>
-              <td ><a class="nav-link active" aria-current="page" href="{% url 'dining' %}"><font style="color: black;">DINING</font></a></td>
-              <td ><a class="nav-link active" aria-current="page" href="{% url 'lighting' %}"><font style="color: black;">LIGHTING</font></a></td>
-              <td><a class="nav-link active" aria-current="page" href="{% url 'garden' %}"><font style="color: black;">GARDEN</font></a></td>
-              <td><a class="nav-link active" aria-current="page" href="{% url 'dress' %}"><font style="color: black;">DRESS</font></a></td>
-             
-               
-                <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}"><font style="color: black;">DECOR</font></a></td>
-              
-                
-              </tr>
-          </table>
-          
-        </div>
-      </nav>
-    </div> <div >
-        <br>
+
+   
+        <br><br>
         
             <div align="center">
             <table border="0"  cellpadding="15" >
@@ -34,44 +16,62 @@
           <td>  <p><font size="4" face="verdana"> Explore a wide range of handmade home decor items for your home from Craft shop. Be it a kitchen, wall decorative items for the living room, or garden we have an exclusive collection of the best handmade home decoration accessories that can easily blend with your home.</font></p><hr></td> 
               
               </tr>
-          </div>
+          
               </table>
-              <div align="center">
-                  <table cellpadding="30px" cellspacing="20px">
-                    
-                    <tr >
-                      <td ><img src="{% static 'images/decor1.PNG' %}" height="300px" width="250px" alt=""></td>
-                      <td><img src="{% static 'images/decor2.PNG' %}" height="250px" width="250px" alt=""></td>
-                      <td><img src="{% static 'images/decor3.PNG'%}" height="250px" width="250px" alt=""></td>
-                      <td><img src="{% static 'images/bowl.PNG' %}" height="250px" width="250px" alt=""></td>
-                   </tr>
-                   <tr>
-                     <td><a class="nav-link active text-dark bg-light"  aria-current="page" href="#">8 Terracotta Warli Handpainted<br> Pots With Sheesham Wooden<br> Frame Wall Hanging<br> <span><font size="5">Rs:1,650.00</font></span></a></td>
-                     <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">"Coloured Fish" Handmade &<br> Hand-Painted Garden <br>Decorative Wall Hanging<br> In Terracotta <br> <span><font size="5">Rs:1,000.00</font></span></a></td>
-                     <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">Meenakari Royal Blue <br>Swan Set Handenamelled In Metal<br><span><font size="5">Rs600.00</font></span></a></td>
-                     <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">The Hut Curved Serving <br> Hand-Painted Ceramic <br>Bowls (Set Of 2)<br><span><font size="5">Rs:749.00</font></span></a></td>
-                   </tr>
-                   <!-- <div align="center">
-                      <table cellpadding="30px" cellspacing="20px"> -->
-                        
-                        <tr >
-                          <td ><img src="{% static 'images/spicebox.PNG' %}" height="250px" width="250px" alt=""></td>
-                          <td><img src="{% static 'images/dining3.PNG' %}"  height="250px" width="250px" alt=""></td>
-                          <td><img src="{% static 'images/dining4.PNG'%}"   height="250px" width="250px" alt=""></td>
-                          <td><img src="{% static 'images/dining5.PNG' %}"  height="250px" width="250px" alt=""></td>
-                       </tr>
-                       <tr>
-                         <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">"Twelve Blends" Spice Box<br> With 12 Containers & Spoon <br>In Sheesham Wood<br><span><font size="5">Rs:1,299.00</font></span></a></td>
-                         <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">'Indigo Chevron' Hand-painted <br> Ceramic Milk & Water Jug <br>(Non-airtight, 480 ML, <br> Microwave Safe)<br><span><font size="5">Rs:575.00</font></span></a></td>
-                         <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">'Daawat-e-Taj' Handcrafted <br>Ceramic Teapot Set of 3 <br>(Tea Pot, Milk Pot, Sugar Pot) <br>(Microwave Safe)<br><span><font size="5">Rs:1,575.00</font></span></a></td>
-                         <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">'Oasis Plank Duo' Hand-Painted <br> Nested Serving Trays In <br> Sheesham Wood (Set of 2)<br><span><font size="5">Rs:2,009.00</font></span></a></td>
-                       </tr>
-                      <!-- </table>
-                    </div> -->
-                  </table>
-                </div>  
-  
+            </div>
 
+              <!-- -----card----- -->
+
+              <div class="container">
+                <div class="row row-cols-1 row-cols-md-4">
+                    <div class="col mb-4">
+                        <div class="card" style="width: 300px;">
+                          <img src="{% static 'images/decor1.PNG' %}"  height="350px"   class="card-img-top" alt="...">
+                          <div class="card-body" >
+                            <a href="{% url 'decor_hangingpot' %}" class="card-title" style="color:black;"><label for="">8 Terracotta Warli Handpainted Pots With Sheesham Wooden
+                               Frame Wall Hanging<br> <span><font size="5">Rs:1,650.00</font></span></label></a  >
+                          </div>
+                        </div>
+                      </div>
+          
+                      <div class="col mb-4">
+                        <div class="card"style="width: 300px;">
+                          <img src="{% static 'images/decor2.PNG' %}"  height="350px" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <a href="{% url 'decor_coloredfish' %}" class="card-title" style="color:black;"><label for="">"Coloured Fish" Handmade & Hand-Painted Garden
+                               Decorative Wall Hanging In Terracotta <br> <span><font size="5">Rs:1,000.00</font></span></label></a>
+                          </div>
+                        </div>
+                      </div>
+          
+                      <div class="col mb-4">
+                        <div class="card"style="width: 300px;">
+                          <img src="{% static 'images/decor3.PNG' %}"  height="370px" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <a href="{% url 'decor_meenakari' %}" class="card-title" style="color:black;"><label for="">Meenakari Royal Blue 
+                              Swan Set Handenamelled In Metal<br><span><font size="5">Rs600.00</font></span></label></a>
+                          </div>
+                        </div>
+                      </div>
+          
+                      <div class="col mb-4">
+                        <div class="card"style="width: 300px;">
+                          <img src="{% static 'images/decor5.PNG' %}"  height="370px" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <a href="{% url 'decor_kathakali' %}" class="card-title" style="color:black;"><label for="">'Kathakali Maquillage' Hand Carved Block Wall Décor In Sheesham Wood<br><span>
+                                <font size="5">Rs:1,200.00</font>
+                              </span></label></a>
+                          </div>
+                        </div>
+                      </div>
+          
+                </div>
+              </div>
+
+
+
+
+              
                 {% endblock %}
       
 </body>
