--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -1,220 +1,255 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block content %}
-<!-- <div>
-<nav class="navbar navbar-expand-lg navbar-dark bg-light">
-<div class="container-fluid " style=" margin-top: 100px; ">
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-  <table cellpadding="30px" cellspacing="20px" align="center">
-    <tr>
-      <td ><a class="nav-link active" aria-current="page" href="{% url 'dining' %}"><font style="color: black;">DINING</font></a></td>
-      <td ><a class="nav-link active" aria-current="page" href="{% url 'lighting' %}"><font style="color: black;">LIGHTING</font></a></td>
-      <td><a class="nav-link active" aria-current="page" href="{% url 'garden' %}"><font style="color: black;">GARDEN</font></a></td>
-      <td><a class="nav-link active" aria-current="page" href="{% url 'dress' %}"><font style="color: black;">DRESS</font></a></td>
-      <td><a class="nav-link active" aria-current="page" href="{% url 'gift' %}"><font style="color: black;">GIFTING</font></a></td>
-       <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">FURNITURES</font></a></td>
-        <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}"><font style="color: black;">DECOR</font></a></td>
-        <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">NEW</font></a></td>
-        <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">MORE</font></a></td>
-      </tr>
-  </table>
-  </div>
-</div>
-</nav>
-</div> -->
 
-
-
-<!-- -------- -->
-
-<div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-    <div class="container-fluid" style=" margin-top: 100px; height: 50px; ">
-      <!-- <div class="container"> -->
-       
-      <table cellpadding="30px" cellspacing="20px" align="center">
-        <!-- <div class="row row-cols-1 row-cols-md-12">
-          <div class="col mb-12"> -->
-        <tr>
-          <td><a class="nav-link active" aria-current="page" href="{% url 'dining' %}">
-              <font style="color: black;">DINING</font>
-            </a></td>
-          <td><a class="nav-link active" aria-current="page" href="{% url 'lighting' %}">
-              <font style="color: black;">LIGHTING</font>
-            </a></td>
-          <td><a class="nav-link active" aria-current="page" href="{% url 'garden' %}">
-              <font style="color: black;">GARDEN</font>
-            </a></td>
-          <td><a class="nav-link active" aria-current="page" href="{% url 'dress' %}">
-              <font style="color: black;">DRESS</font>
-            </a></td>
-          
-         
-          <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}">
-              <font style="color: black;">DECOR</font>
-            </a></td>
-          
-         
-        </tr>
-          </div>
-        </div>
-      </table>
-           
-        
-
-    </div>
-  </nav>
-</div>
-
-
-
-<!-- ------nav2------ -->
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid" style=" margin-top: 100px; ">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Navbar</a>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Dining</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lighting</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav> -->
-
-
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-<div class="carousel-indicators">
-  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-</div>
-<div class="carousel-inner">
-  <div class="carousel-item active">
-    <img src="{% static 'images/pic2.jpg' %}" height="500px" width="1200px"class="d-block w-100"alt="...">
-    <div class="carousel-caption d-none d-md-block">
-      <!-- <h5>First slide label</h5>
-      <p>Some representative placeholder content for the first slide.</p> -->
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img src="{% static 'images/pc1.PNG' %}" height="500px" width="1200px" class="d-block w-100" alt="...">
-    <div class="carousel-caption d-none d-md-block">
-      <!-- <h5>Second slide label</h5>
-      <p>Some representative placeholder content for the second slide.</p> -->
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img src="{% static 'images/pic1.PNG' %}" height="500px" width="1200px" class="d-block w-100" alt="...">
-    <div class="carousel-caption d-none d-md-block">
-      <!-- <h5>Third slide label</h5>
-      <p>Some representative placeholder content for the third slide.</p> -->
-    </div>
-  </div>
-</div>
-<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="visually-hidden">Next</span>
-</button>
-
-</div>
-<br>
-<br>
-<div >
-<center><h1><font face="verdana">HANDCRAFTED IN INDIA</font></h1></center>
-<br>
-<div align="center">
-<p><font size="5" face="verdana">Craft shop is an online craft brand started in 2022 with a vision to promote Indian handicrafts globally & help small artisans based in different parts of India earn a living out of it. Amazing Traditional Indian Handicrafts You will Love.</font> </p>
-</div>
 <br><br>
-<table border="0" cellpadding="50px"  >
-  <tr><td>
-<h1><font face="verdana">shop by category</font></h1>
-</td>
-</tr>
-</table>
-<br><br>
-<div align="center">
- <!-- <table cellpadding="30px" cellspacing="20px">
-   
-   <tr >
-     <td ><img src="{% static 'images/spicebox.PNG' %}" height="300px" width="300px" alt=""></td>
-     <td><img src="{% static 'images/plates.PNG' %}" height="300px" width="300px" alt=""></td>
-     <td><img src="{% static 'images/TABLE LAMP.PNG'%}" height="300px" width="300px" alt=""></td>
-     <td><img src="{% static 'images/bowl.PNG' %}" height="300px" width="300px" alt=""></td>
-  </tr>
-  <tr>
-    <td><a class="nav-link active text-dark" aria-current="page" href="#">Spice Box</a></td>
-    <td><a class="nav-link active text-dark" aria-current="page" href="#">Plates</a></td>
-    <td><a class="nav-link active text-dark" aria-current="page" href="#">Table Lamps</a></td>
-    <td><a class="nav-link active text-dark" aria-current="page" href="#">Bowls</a></td>
-  </tr>
- </table> -->
 
- <!-- <div class="card" style="width: 18rem;">
-  <img src="{% static 'images/spicebox.PNG' %}" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title"><a href=""></a> Spicebox</h5>
-  </div>
 
-  <div class="card" style="width: 18rem;">
-    <img src="{% static 'images/spicebox.PNG' %}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title"><a href=""></a> Spicebox</h5>
-    </div>
+<style>
+  .carousel {
+    margin: 0 50px;
+
+  }
+
+  /* nav{
+   width: 100%;
+  
+
+  }
+
+#navbarNav{
+
+margin-left: 600px;
+
+
+}
+
+ul{
+  column-gap: 100px;
+} */
+
+  #carousel1 .btn {
+    position: absolute;
+    top: 59%;
+    left: 8%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  #carousel1 .btn:hover {
+    background-color: black;
+  }
+
+
+  #carousel2 .btn {
+    position: absolute;
+    top: 59%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+
+    text-align: center;
+
+  }
+
+  #carousel2 .btn:hover {
+    background-color: black;
+  }
+
+
+
+  #carousel3 .btn {
+    position: absolute;
+    top: 62%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  #carousel3 .btn:hover {
+    background-color: black;
+  }
 
   
+</style>
+
+
+
+
+<!-- ----carousel------ -->
+
+
+<div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" id="carousel1">
+      <img src="{% static 'images/carousel4.PNG' %}" height="700px" width="1200px" class="d-block w-100" alt="...">
+      <button class="btn" style="size: 7;"><a class="nav-link active" href="{% url 'decor' %}"
+          style="color: white;">Shop Now</a></button>
+      <div class="carousel-caption d-none d-md-block">
+        <!-- <h5>First slide label</h5>
+      <p>Some representative placeholder content for the first slide.</p> -->
+      </div>
+    </div>
+    <div class="carousel-item" id="carousel2">
+      <img src="{% static 'images/pic3.PNG' %}" height="700px" width="1200px" class="d-block w-100" alt="...">
+      <button class="btn" style="size: 7;"><a class="nav-link active" href="{% url 'dress' %}"
+          style="color: white;">Shop Now</a></button>
+      <div class="carousel-caption d-none d-md-block">
+        <!-- <h5>Second slide label</h5>
+      <p>Some representative placeholder content for the second slide.</p> -->
+      </div>
+    </div>
+    <div class="carousel-item" id="carousel3">
+      <img src="{% static 'images/carousel1.PNG' %}" height="700px" width="1200px" class="d-block w-100" alt="...">
+      <button class="btn" style="size: 7;"><a class="nav-link active" href="{% url 'lighting' %}"
+          style="color: white;">Shop Now</a></button>
+      <div class="carousel-caption d-none d-md-block">
+        <!-- <h5>Third slide label</h5>
+      <p>Some representative placeholder content for the third slide.</p> -->
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+
 </div>
-</div> -->
-<div class="container">
-  <div class="row row-cols-1 row-cols-md-3">
-      <div class="col mb-4">
-          <div class="card">
-            <img src="{% static 'images/spicebox.PNG' %}" height="400px" width="300px" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="" class="card-title"><font style="color: black;"><label for="">DINING</label></font></a  >
-            </div>
-          </div>
-        </div>
+<br>
+<br>
+
+  <center>
+    <h1>
+      <font face="verdana">HANDCRAFTED IN INDIA</font>
+    </h1>
+  </center>
+  <br>
+  <div align="center">
+    <p>
+      <font size="5" face="verdana">Craft shop is an online craft brand started in 2022 with a vision to promote Indian
+        handicrafts globally & help small artisans based in different parts of India earn a living out of it. Amazing
+        Traditional Indian Handicrafts You will Love.</font>
+    </p>
+  </div>
+  <br><br>
+  <table border="0" cellpadding="50px">
+    <tr>
+      <td>
+        <h1>
+          <font face="verdana">shop by category</font>
+        </h1>
+      </td>
+    </tr>
+  </table>
+  <br><br>
+
+
+
+  <!-- -card- -->
+
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-2">
       <div class="col mb-4">
         <div class="card">
-          <img src="{% static 'images/TABLE LAMP.PNG' %}"  height="400px" width="300px" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="#" class="card-title" style="color:black;"><font style="color: black;"><label for="">LIGHTING</label></font></a>
-          </div>
+          <a href=""><img src="{% static 'images/homecard.PNG' %}" height="600px" class="card-img-top"
+              alt="..."><label for=""  ><font size="6" >Get-Togethers</font></label></a>
         </div>
       </div>
       <div class="col mb-4">
-          <div class="card">
-            <img src="{% static 'images/dress4.PNG' %}" height="400px" width="300px" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="#" class="card-title"><font style="color: black;"><label for="">DRESS</label></font></a>
-            </div>
-          </div>
+        <div class="card">
+          <a href=""> <img src="{% static 'images/homecard2.PNG' %}" height="600px" width="500px"
+              class="card-img-top" alt="..."><label for=""  ><font size="6" >Me Time</font></label></a> 
+        </div>
       </div>
+      
+    </div>
   </div>
-</div>
-</div>
+
+
+  <br><br>
+
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-2">
+      <div class="col mb-4">
+        <div class="card">
+          <a href=""><img src="{% static 'images/homecard3.PNG' %}" height="600px" class="card-img-top"
+              alt="..."><label for=""  ><font size="6" >Back to Office</font></label></a>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <a href=""> <img src="{% static 'images/homecard4.PNG' %}" height="600px" width="500px"
+              class="card-img-top" alt="..."><label for=""  ><font size="6" >Birthdays</font></label></a> 
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
+  <br><br>
+
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card">
+          <a href="{% url 'decor' %}"><img src="{% static 'images/homecard5.PNG' %}" height="600px" class="card-img-top"
+              alt="...">
+              <label for=""  ><font size="6" >Decor & Living</font></label></a>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <a href="{% url 'dining'  %}"> <img src="{% static 'images/homecard6.PNG' %}" height="600px" width="500px"
+              class="card-img-top" alt="..."><label for=""  ><font size="6" >dining & Kitchen</font></label></a> 
+        </div>
+      </div>
+
+      <div class="col mb-4">
+        <div class="card">
+          <a href=""> <img src="{% static 'images/carousel2.jpeg' %}" height="600px" width="500px"
+              class="card-img-top" alt="...">
+              <label for=""  ><font size="6" >bed & furnishing</font></label></a> 
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
 <!-- ......modal...... -->
 
- <!-- <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<!-- <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
