--- a/craft_shop/templates/lighting.html
+++ b/craft_shop/templates/lighting.html
@@ -2,53 +2,22 @@
 {% load static %}
 {% block content %}
 
-<div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-      <div class="container-fluid" style=" margin-top: 100px; height: 50px;">
-        <table cellpadding="30px" cellspacing="20px" align="center">
-          <tr>
-            <td><a class="nav-link active" aria-current="page" href="{% url 'dining' %}">
-                <font style="color: black;">DINING</font>
-              </a></td>
-            <td><a class="nav-link active" aria-current="page" href="#">
-                <font style="color: black;">LIGHTING</font>
-              </a></td>
-            <td><a class="nav-link active" aria-current="page" href="#">
-                <font style="color: black;">GARDEN</font>
-              </a></td>
-            <td><a class="nav-link active" aria-current="page" href="#">
-                <font style="color: black;">DRESS</font>
-              </a></td>
-            
-            
-            <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}">
-                <font style="color: black;">DECOR</font>
-              </a></td>
-           
-            
-          </tr>
-        </table>
-  
-      </div>
-    </nav>
-  </div>
 
-  <div>
-    <br>
+  
+    <br><br>
   
     <div align="center">
       <table border="0" cellpadding="15">
         <tr>
           <td>
-            <h1>All Kitchen & Dining</h1>
+            <h1>All Lighting</h1>
           </td>
         </tr>
         <tr>
           <td>
             <p>
-              <font size="4" face="verdana"> Enhance the experience of culinary with kitchen
-                and dining accessories brought to you by Craft shop . The handmade wooden kitchen accessories
-                will add rich vibes of traditional flavours to your abode and will catch the eye of your guests.</font>
+              <font size="4" face="verdana"> Adorn the interior of your home with beautifully handcrafted lights and lamps from Craftshop. Explore the wide collection of lights from table lamps to 
+                pendant and chandeliers and redefine the ambience of your living space.</font>
             </p>
             <hr>
           </td>
@@ -56,44 +25,61 @@
         </tr>
     </div>
     </table>
-    <div align="center">
-      <table cellpadding="30px" cellspacing="20px">
-  
-        <tr>
-          <td><img src="{% static 'images/dress1.PNG' %}" height="300px" width="250px" alt=""></td>
-          <td><img src="{% static 'images/dress2.PNG' %}" height="300px" width="250px" alt=""></td>
-          <td><img src="{% static 'images/dress3.PNG'%}" height="300px" width="250px" alt=""></td>
-          <td><img src="{% static 'images/dress4.PNG' %}" height="300px" width="250px" alt=""></td>
-        </tr>
-        <tr>
-          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#"> W<br>
-            Beige & Black Embroidered Striped <br> Keyhole Neck Tiered Ethnic Maxi Dress <br> <span>
-                <font size="5">Rs:1,650.00</font>
-              </span></a></td>
-          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">W <br>
-            Women Lime Green <br> Solid Straight Kurta <br> <span>
-                <font size="5">Rs:1,149.00</font>
-              </span></a></td>
-          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">anayna<br>
-            Red & Blue Floral <br> Ethnic Maxi Dress<br> <span>
-                <font size="5">Rs:1,895.00</font>
-              </span></a></td>
-          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">SASSAFRAS<br>
-            Yellow & Off-White  <br>Floral Printed Wrap Dress
-              H<br><span>
-                <font size="5">Rs:749.00</font>
-              </span></a></td>
-        </tr>
-      
-      </table>
+
+    <!-- ----card---- -->
+
+
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-4">
+          <div class="col mb-4">
+              <div class="card" style="width: 300px;">
+                <img src="{% static 'images/light1.PNG' %}"  height="370px"   class="card-img-top" alt="...">
+                <div class="card-body" >
+                  <a href="" class="card-title" style="color:black;"><label for="">14 Inch Pyramid Lamp In Sheesham Wood <br>
+                    <span>
+                      <font size="5">Rs:1000.00</font></span></label></a  >
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-4">
+              <div class="card"style="width: 300px;">
+                <img src="{% static 'images/light2.PNG' %}"  height="350px" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <a href="#" class="card-title" style="color:black;"><label for="">Glowing Vines Handcrafted Wall Sconce Tea Light Holders In Iron With Glass Holders (Set of 2)<br><span>
+                      <font size="5">Rs:1,149.00</font>
+                    </span></label></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-4">
+              <div class="card"style="width: 300px;">
+                <img src="{% static 'images/light3.PNG' %}"  height="350px" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <a href="#" class="card-title" style="color:black;"><label for="">'Morrocan Flame' Hand-etched Pendant Lamp In Iron (13 Inch, Matte Finish) <br><span>
+                      <font size="5">Rs:1,800.00</font>
+                    </span></label></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-4">
+              <div class="card"style="width: 300px;">
+                <img src="{% static 'images/light4.PNG' %}"  height="370px" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <a href="#" class="card-title" style="color:black;"><label for="">'The Bottle Trio' Terracotta Hanging Tea-Light Holders (Set Of 3)<br><span>
+                      <font size="5">Rs:1,749.00</font>
+                    </span></label></a>
+                </div>
+              </div>
+            </div>
+
+      </div>
     </div>
-  
-  
-  
-  
-  </div>
 
 
+  
 
 
 
