--- a/craft_shop/templates/login.html
+++ b/craft_shop/templates/login.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="{% static 'css/login.css'%}">
+  <!-- <link rel="stylesheet" href="{% static 'css/login.css'%}"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -30,7 +30,7 @@
 
 <body>
   <center> <a class="navbar-brand  fst-italic" href="{% url 'home' %}">
-      <font face="italic" style="color:rgb(248, 110, 133);" size="8">craft shop</font>
+    <img src="{% static 'images/insidelogo.PNG' %}" alt=""  height="100px" width="200px">
     </a></center>
   <br>
 
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="pt-1 mb-4">
-                      <button class="btn btn-dark btn-lg btn-block" type="button" id="log_btn"
+                      <button class="btn btn-dark btn-lg btn-block" type="submit" id="log_btn"
                         onclick="validation()">Login</button>
                     </div>
 
