--- a/craft_shop/templates/master.html
+++ b/craft_shop/templates/master.html
@@ -1,202 +1,287 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>craftshop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>craftshop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+
+  <style>
+   
+
+    #navbarSupportedContent {
+      column-gap: 450px;
+
+    }
+    .dropdown-menu{
+     
+     width: 250px;
+     font-style: italic;
+     font-size: 20px;
+
+    }
+    
+   
+
+#navbarNav{
+
+margin-left: 600px;
+
+
+}
+
+ul{
+  column-gap: 100px;
+}
+  </style>
+
+
+
 </head>
+
 <body>
-   
-  <nav class="navbar fixed-top navbar-expand-lg  navbar-dark" style="padding: 0;">
-    <div class="container-fluid "   align="center" style="background-color: white;padding-top:0%;margin-top: 0%;" >
-      <a class="navbar-brand  fst-italic"  href="{% url 'home' %}"><font face="italic" style="color:rgb(248, 110, 133);" size="8">craft shop</font></a>
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 300px;">
-      <button type="button" style="background-color:papayawhip;">search</button>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-       <span class="navbar-toggler-icon"> search</span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          
-        </ul>
-         
-        
-       
 
-        <form class="d-flex"  >
-          
-          <table  cellpadding="30" cellspacing="30">
-            <tr >
-         
-       
-        
-        <td>  <a href="{% url 'login' %}"><img src="{%  static 'images/account.PNG'  %}" height="30px" width="30px" alt="a">
-          <label for="" style="color:black;"><font size="4" face="verdana">account</font></label></td>
-          <td><a href="{% url 'cart' %}"><img src="{%  static 'images/cart2.PNG' %}" height="30px" width="30px" alt=""><label for="" style="color:black;"><font size="4" face="verdana">cart</font></label></a></td>
-        </tr>
-        </a>
-        </table>
-       
-        </form>
-      </div>
+
+
+
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" style="padding: 0;">
+    <div class="container-fluid" style="background-color: white;">
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                    style="width: 400px;">
+                <button class="btn btn-outline-success" type="submit" style="background-color:black;">
+                    <font style="color: white;">Search</font>
+                </button>
+            </form>
+
+            <a class="navbar-brand  fst-italic" href="{% url 'home' %}">
+                <!-- <font face="italic" style="color:black" size="28">Inside</font> -->
+                <img src="{% static 'images/insidelogo.PNG' %}" alt=""  height="100px" width="200px">
+            </a>
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="{% url 'login' %}" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="{%  static 'images/user.PNG'  %}" height="35px" width="35px" alt="a">
+                        <label for="" style="color:black;">
+                            <font size="4" face="verdana">account</font>
+                        </label>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{% url 'login'%}"> Sign in</a></li>
+
+                        <BR>
+                        <li>New customer?<a class="dropdown-item" href="{% url 'signup'%}"> Sign Up</a></li>
+                        </BR>
+                        <li><a class="dropdown-item" href="{% url 'signup'%}">My profile</a></li>
+                        <BR>
+                        <li><a class="dropdown-item" href="{% url 'signup'%}">Orders</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'cart' %}"><img src="{%  static 'images/shopping-cart.PNG' %}"
+                            height="35px" width="35px" alt=""><label for="" style="color:black;">
+                            <font size="4" face="verdana">cart</font>
+                        </label></a>
+                </li>
+
+
+
+
+            </ul>
+        </div>
     </div>
-  </nav>
+
+</nav>
+
+  <br><br><br><br><br><br><br>
 
 
-   <!-- navbar -->
-   
-
-
-
-  <!-- <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid" >
-      <a class="navbar-brand fst-italic" href="{% url 'home' %}"><font face="italic" style="color:rgb(248, 110, 133);" size="8">craft shop</font></a>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 300px;">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <div class="container-fluid">
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page"href="{% url 'dining' %}"><font style="color: black;"><b>DINING</b></font></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page"  href="{% url 'lighting' %}"><font style="color: black;"><b> LIGHTING </b></font></a>
+        </li> <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'garden' %}"><font style="color: black;"><b>GARDEN</b></font></a>
+        </li> <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'dress' %}"><font style="color: black;"><b>DRESS</b></font></a>
+        </li> <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'decor' %}"><font style="color: black;"><b>DECOR</b></font></a>
+        </li>
+      </ul>
     </div>
-  </nav> -->
+  </div>
+</nav>
+
+
+ 
+
   {% block content %}
 
   {% endblock %}
-    
 
-<!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
-  <!-- Section: Social media -->
-  <section
-    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-  >
-    <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
-    </div>
-    <!-- Left -->
 
-    <!-- Right -->
-    <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
+  <!-- Footer -->
+  <footer class="text-center text-lg-start bg-light text-muted">
+    <!-- Section: Social media -->
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <!-- Left -->
+      <div class="me-5 d-none d-lg-block">
+        <span>Get connected with us on social networks:</span>
+      </div>
+      <!-- Left -->
 
-  <!-- Section: Links  -->
-  <section class="">
-    <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Craft Shop
-          </h6>
-          <!-- <p>
+      <!-- Right -->
+      <div>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+      <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3"></i>Craft Shop
+            </h6>
+            <p>
+              <a href="{% url 'aboutus' %}" class="text-reset">About Us</a>
+            </p>
+            <!-- <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
             dolor sit amet, consectetur adipisicing elit.
           </p> -->
-        </div>
-        <!-- Grid column -->
+          </div>
+          <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Products
-          </h6>
-          <p>
-            <a href="{% url 'dining' %}" class="text-reset">Dining</a>
-          </p>
-          <p>
-            <a href="{% url 'dress' %}" class="text-reset">Dress</a>
-          </p>
-          <p>
-            <a href="{% url 'decor' %}" class="text-reset">Decor</a>
-          </p>
-          <p>
-            <a href="{% url 'garden' %}" class="text-reset">Garden</a>
-          </p>
-        </div>
-        <!-- Grid column -->
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Products
+            </h6>
+            <p>
+              <a href="{% url 'dining' %}" class="text-reset">Dining</a>
+            </p>
+            <p>
+              <a href="{% url 'dress' %}" class="text-reset">Dress</a>
+            </p>
+            <p>
+              <a href="{% url 'decor' %}" class="text-reset">Decor</a>
+            </p>
+            <p>
+              <a href="{% url 'garden' %}" class="text-reset">Garden</a>
+            </p>
+          </div>
+          <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
-          </p>
-        </div>
-        <!-- Grid column -->
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful links
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">ABOUT US</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Settings</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Orders</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Help</a>
+            </p>
+          </div>
+          <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Contact
-          </h6>
-          <p><i class="fas fa-home me-3"></i> India</p>
-          <p>
-            <i class="fas fa-envelope me-3"></i>
-            info@example.com
-          </p>
-          <p><i class="fas fa-phone me-3"></i> +91 6282592720</p>
-          <!-- <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p> -->
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Contact
+            </h6>
+            <p><i class="fas fa-home me-3"></i> India</p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              info@example.com
+            </p>
+            <p><i class="fas fa-phone me-3"></i> +91 6282592720</p>
+            <!-- <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p> -->
+          </div>
+          <!-- Grid column -->
         </div>
-        <!-- Grid column -->
+        <!-- Grid row -->
       </div>
-      <!-- Grid row -->
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2022 Copyright:
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">craftshop.com</a>
     </div>
-  </section>
-  <!-- Section: Links  -->
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 
-  <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2022 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">craftshop.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-<!-- Footer -->
 
- 
 </body>
+
 </html>
