--- a/craft_shop/templates/cart.html
+++ b/craft_shop/templates/cart.html
@@ -38,6 +38,16 @@
 
   }
 
+  #cart_img{
+  
+ margin-top: 20%;  
+ margin-bottom: 10%;
+
+  }
+  #cart_log{
+    background-color: black;
+  }
+
  /* #navbarNav{
 
 margin-left: 600px;
@@ -101,21 +111,18 @@ ul{
             </ul>
           </li>
          
-          
-
-
-         
-
         </ul>
+        
       </div>
     </div>
 
   </nav>
+  <hr>
 
-  <br><br><br><br><br><br><br>
-  <div class="text-center bg-light" id="cart_img">
-
-    <img src="{% static 'images/empty cart2.PNG'%}" class="rounded" alt="..." width="300px" height="200px">
+  
+  <div class="text-center" id="cart_img">
+    
+    <img src="{% static 'images/empty_cart.PNG'%}" class="rounded" alt="..." width="200px" height="150px">
 
     <br><br>
     <label for="">
@@ -125,7 +132,7 @@ ul{
     <label for="">Login to see the items you added previously</label>
     <br><br>
     <button class=" btn btn-lg btn-block " type="button" id="cart_log"><a href="{% url 'login' %}"
-        style="color:black;">Login</a></button>
+        style="color:white;">Login</a></button>
 
 
   </div>
